[gd_scene load_steps=4 format=2]

[ext_resource path="res://components/collect_run_display/collect_run_display.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/popups/popup_workflows.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="WorkflowsPopup" type="PanelContainer"]
margin_right = 500.0
margin_bottom = 78.0
rect_min_size = Vector2( 500, 0 )
mouse_filter = 2
theme_type_variation = "PanelPopup"
script = ExtResource( 3 )

[node name="Margin" type="MarginContainer" parent="."]
margin_left = 6.0
margin_top = 2.0
margin_right = 494.0
margin_bottom = 316.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 483.0
margin_bottom = 309.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WorkflowsHeadline" type="Label" parent="Margin/VBox"]
visible = false
margin_right = 468.0
margin_bottom = 30.0
theme_type_variation = "Label_24"
text = "Workflows"

[node name="HSeparator" type="HSeparator" parent="Margin/VBox"]
visible = false
margin_top = 34.0
margin_right = 468.0
margin_bottom = 38.0

[node name="CollectRunDisplay" parent="Margin/VBox" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 478.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
wait_for_task_started = false

[node name="PanelContainer" parent="Margin/VBox/CollectRunDisplay" index="1"]
custom_styles/panel = SubResource( 1 )

[node name="Content" parent="Margin/VBox/CollectRunDisplay/PanelContainer" index="0"]
margin_left = 0.0
margin_top = 0.0
margin_right = 478.0
margin_bottom = 300.0

[node name="HBoxContainer" parent="Margin/VBox/CollectRunDisplay/PanelContainer/Content" index="0"]
margin_right = 478.0

[node name="Control" parent="Margin/VBox/CollectRunDisplay/PanelContainer/Content/HBoxContainer" index="2"]
margin_right = 478.0

[node name="ErrorBtn" parent="Margin/VBox/CollectRunDisplay/PanelContainer/Content/HBoxContainer" index="4"]
margin_left = 445.0
margin_right = 478.0

[node name="ScrollContainer" parent="Margin/VBox/CollectRunDisplay/PanelContainer/Content" index="1"]
margin_right = 478.0
margin_bottom = 300.0

[node name="Content" parent="Margin/VBox/CollectRunDisplay/PanelContainer/Content/ScrollContainer" index="0"]
margin_right = 478.0
margin_bottom = 262.0

[node name="Elements" parent="Margin/VBox/CollectRunDisplay/PanelContainer/Content/ScrollContainer/Content" index="0"]
margin_right = 478.0
margin_bottom = 262.0

[node name="ErrorPopup" parent="Margin/VBox/CollectRunDisplay" index="2"]
layer = 21

[node name="Spacer" type="Control" parent="Margin/VBox"]
margin_top = 304.0
margin_right = 478.0
margin_bottom = 304.0

[connection signal="all_done" from="Margin/VBox/CollectRunDisplay" to="." method="_on_CollectRunDisplay_all_done"]
[connection signal="message_new" from="Margin/VBox/CollectRunDisplay" to="." method="_on_CollectRunDisplay_message_new"]

[editable path="Margin/VBox/CollectRunDisplay"]
